--- a/compose.yml
+++ b/compose.yml
@@ -11,7 +11,7 @@ services:
      - postgres_data:/var/lib/postgresql/data
    env_file:
      - .env
- 
+
  habits-web:
    build: .
    container_name: habits-docker
@@ -24,12 +24,12 @@ services:
      DEBUG: ${DEBUG}
      DJANGO_LOGLEVEL: ${DJANGO_LOGLEVEL}
      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
-     DATABASE_ENGINE: ${DATABASE_ENGINE}
+     DATABASE_ENGINE: postgresql_psycopg2
      DATABASE_NAME: ${DATABASE_NAME}
      DATABASE_USERNAME: ${DATABASE_USERNAME}
      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-     DATABASE_HOST: ${DATABASE_HOST}
-     DATABASE_PORT: ${DATABASE_PORT}
+     DATABASE_HOST: db
+     DATABASE_PORT: 5432
    env_file:
      - .env
 volumes:
